<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.reuss.tmdb</groupId>
    <artifactId>tmdb-sdk</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <name>TMDB Java SDK</name>
    <description>A modern Java client library for The Movie Database API.</description>
    <url>https://reussio.github.io/tmdb-sdk/</url>

    <modules>
        <module>tmdb-core</module>
        <module>tmdb-spring-boot-starter</module>
    </modules>

    <licenses>
        <license>
            <name>MIT License</name>
            <url>https://opensource.org/licenses/MIT</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <id>reussio</id>
            <name>Tobias Reuß</name>
            <url>https://github.com/reussio</url>
        </developer>
    </developers>

    <scm>
        <connection>scm:git:https://github.com/reussio/tmdb-sdk.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/reussio/tmdb-sdk.git</developerConnection>
        <url>https://github.com/reussio/tmdb-sdk</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <java.version>17</java.version>
        <jackson.version>2.22.0</jackson.version>
        <junit.version>5.11.4</junit.version>
        <spotless.version>3.7.0</spotless.version>
        <spring-boot.version>3.5.15</spring-boot.version>
        <slf4j.version>2.0.18</slf4j.version>
    </properties>

    <dependencies/>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>${spotless.version}</version>
                <configuration>
                    <java>
                        <removeUnusedImports/>
                        <trimTrailingWhitespace/>
                        <endWithNewline/>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
